cfn/sg.yaml
Description: VGH SG

Parameters:
  SSHLocations:
    Description: The IP address ranges that can be used to SSH to the EC2 instances
    Type: CommaDelimitedList
  VPCId:
    Description: The VPC ID
    Type: AWS::EC2::VPC::Id

Resources:
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS Firewall
      VpcId: !Ref VPCId
  DBSecurityGroupAllowRheaAccesstoPostgreSQL:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt DBSecurityGroup.GroupId
      FromPort: '5432'
      ToPort: '5432'
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt RheaSecurityGroup.GroupId
  DBSecurityGroupAllowSSH1AccesstoPostgreSQL:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt DBSecurityGroup.GroupId
      FromPort: '5432'
      ToPort: '5432'
      IpProtocol: tcp
      CidrIp: !Select ['0', !Ref SSHLocations]

  EFSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: EFS Firewall
      VpcId: !Ref VPCId
  EFSSecurityGroupAllowRhea:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt EFSSecurityGroup.GroupId
      FromPort: '2049'
      ToPort: '2049'
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt RheaSecurityGroup.GroupId
  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ELB Firewall
      VpcId: !Ref VPCId

  ELBSecurityGroupAllowHTTPS:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ELBSecurityGroup.GroupId
      FromPort: '443'
      ToPort: '443'
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0
  ELBSecurityGroupAllowPuppet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ELBSecurityGroup.GroupId
      FromPort: '8140'
      ToPort: '8140'
      IpProtocol: tcp
      CidrIp: 0.0.0.0/0

  RheaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Rhea Firewall
      VpcId: !Ref VPCId
  RheaSecurityGroupAllowELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt RheaSecurityGroup.GroupId
      FromPort: '0'
      ToPort: '65535'
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt ELBSecurityGroup.GroupId
  RheaSecurityGroupAllowSSH1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt RheaSecurityGroup.GroupId
      FromPort: '22'
      ToPort: '22'
      IpProtocol: tcp
      CidrIp: !Select ['0', !Ref SSHLocations]
  RheaSecurityGroupAllowSelf:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt RheaSecurityGroup.GroupId
      FromPort: '0'
      ToPort: '65535'
      IpProtocol: tcp
      SourceSecurityGroupId: !GetAtt RheaSecurityGroup.GroupId

Outputs:
  DBSecurityGroup:
    Description: The Relational Database Service security group
    Value: !Ref DBSecurityGroup
  EFSSecurityGroup:
    Description: The Elastic File System security group
    Value: !Ref EFSSecurityGroup
  ELBSecurityGroup:
    Description: The Elastic Load Balancer security group
    Value: !Ref ELBSecurityGroup
  RheaSecurityGroup:
    Description: The Puppet Master of Masters security group
    Value: !Ref RheaSecurityGroup
